// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<p
  onClick={[Function]}
>
  Hello there, 
  Alice
  ! Click to change me.
</p>
`;

exports[`renders without crashing 2`] = `
<p
  onClick={[Function]}
>
  Hello there, 
  Shane
  ! Click to change me.
</p>
`;
